--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - run: sudo apt-get update && sudo apt-get install 
+      - run: sudo apt-get update && sudo apt-get install gcc-4.9 && sudo apt-get upgrade libstdc++6
+      
       - name: Setup MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
