--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,6 @@ jobs:
 
       - name: Check out repository
         uses: actions/checkout@v4
-
-      - run: sudo apt-get update && sudo apt-get install gcc-4.9 && sudo apt-get upgrade libstdc++6
       
       - name: Setup MATLAB
         uses: matlab-actions/setup-matlab@v2
@@ -55,6 +53,8 @@ jobs:
             Simscape_Electrical
             Simscape_Multibody
             MATLAB_Test
+
+      - run: sudo rm /opt/hostedtoolcache/MATLAB/2024.1.999/x64/bin/glnxa64/../../sys/os/glnxa64/libstdc++.so.6
 
       - name: Run tests
         uses: matlab-actions/run-command@v2
