--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Setup MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
-          release: R2024a
+          release: latest-including-prerelease
           cache: true
           products: |
             Simulink
@@ -54,7 +54,7 @@ jobs:
             Simscape_Multibody
             MATLAB_Test
 
-      - run: sudo rm /opt/hostedtoolcache/MATLAB/2024.1.999/x64/bin/glnxa64/../../sys/os/glnxa64/libstdc++.so.6
+      # - run: sudo rm /opt/hostedtoolcache/MATLAB/2024.1.999/x64/bin/glnxa64/../../sys/os/glnxa64/libstdc++.so.6
 
       - name: Run tests
         uses: matlab-actions/run-command@v2
